# coach-experiments

./: .dockerignore  .gitignore  Dockerfile.llama  Dockerfile.test  LEARNINGS.md  README.md  Vagrantfile  pyproject.toml  requirements.txt
configs/: matrix.example.yaml
docs/: plan.md  praxis.md  techniques.md
prompts/: endpoint_security_eval.jsonl
scripts/: benchmark.py  download_hf_gguf.py  resolve_model.py  run_matrix.py  run_with_cpu_cap.sh  start_llama_server.sh  test_on_linux.sh
